As a user I can see my data [Delivers #179780495]
