# routes/users.js
@@ -1,7 +1,9 @@
 // Pull in dependencies
 const router = require('express').Router();
 const User = require('../models/User');
+const Account = require('../models/Account');
 const bcrypt = require('bcrypt');
+const {verifyToken} = require("../middleware");
 
 // Handle POST /users
 module.exports = router.post('/', async (req, res) => {
@@ -20,7 +22,13 @@ module.exports = router.post('/', async (req, res) => {
             if (err) throw Error(JSON.stringify(err))
             user.password = hash;
             user.save();
-        });
+        })
+        // add account
+        await Account.create({userId: user._id,
+            account_number: process.env.BANK_PREFIX + Math.random().toString(36).substr(2, 9),
+            currency: 'EUR',
+            balance: '10000',
+            name: 'Main'});
 
         // 201 Created
         res.status(201).end()
@@ -44,4 +52,24 @@ module.exports = router.post('/', async (req, res) => {
         // 500 Unknown error
         return res.status(500).send({error: e.message})
     }
+})
+
+module.exports = router.get('/current', verifyToken, async (req, res) => {
+    try {
+        const user = await User.findOne({_id: req.userId});
+        res.status(200).send({
+                "name": user.name,
+                "username": user.username,
+                "accounts":await Account.find({userid: req.userId})             }
+        )
+
+    } catch (e) {
+
+        // 403 User access forbidden
+        if (req.params._id !== req.userId) {
+            res.status(403).json({error: "Forbidden"})
+
+        }
+    }
+
 })
